@@ -1,6 +1,5 @@
 AUX 1.1.8/0001-no_icu_pc.patch 962 RMD160 88c705be3519860e64ab88c0ccafa74aa6fcf4bf SHA1 8c3b9c8488146cd35c834a2781958e78d35ac63a SHA256 188236e9be627f464b317d7f647b623c4e7f60268cbc813451581536fabeaaf0
 DIST 389-adminutil-1.1.8.tar.bz2 307299 RMD160 9ff2a965e27f6a8eee22fc4375f0c06c4f49fb5e SHA1 ff2090c74f63cce65f8222263207ee5442a9e325 SHA256 d0b6e7447035cecb0b37c38f58eea6a677642b5e07f3f9e6e342e35ddeffa2a4
 EBUILD 389-adminutil-1.1.8-r1.ebuild 791 RMD160 9804bce66e3c40b455e8d13165f75cb575dd9b42 SHA1 3cfa04ea00ca9477cca86c08e7849d8060d2ddde SHA256 da8a2f4687ae8056d06ea7959357d0da8205056c79a7a357bbb7bd577c750255
-EBUILD 389-adminutil-1.1.8.ebuild 1029 RMD160 8b29c9902a48a8f4421bba72c5ba208a8fce37d1 SHA1 4715eb8b4819281c825879f04f7163dd7b7d0094 SHA256 381255ab6d6b6ca7c7c0df0be0e1738dc059b10c30fb8d38e5fa74e5e0eed60c
-MISC ChangeLog 621 RMD160 d6fb135d2186eac96c3afaec1c9396ccdb461ed7 SHA1 b3115961e3ea096b29a102f7f54a57170d64b35f SHA256 899709736ca72c45e934e826fc3d10ffc7fa19a4985c212f1fabb51a394d4098
+MISC ChangeLog 717 RMD160 77e33edae3bcf9639554ee3465bbfa61e62af720 SHA1 22b3f29384569238ce2b0143b52efcdfd18d8e8e SHA256 2867231ca8381e0f049e83e5cf3d3f6c590802cfd830617fd875f8632a4cbb6d
 MISC metadata.xml 170 RMD160 645927a396fdc21cdeb089fe42c5397332420ea6 SHA1 ac7f48a14fec325926f9ce1be8fbf1f311b4f2e4 SHA256 d797a2ec6f9dc516c9f9c1a758ee87ad3e8c43101b5dc76c2f872d5bd4639b42
